[gd_scene load_steps=10 format=2]

[ext_resource path="res://Town/ShopMenu.gd" type="Script" id=1]
[ext_resource path="res://Town/BuyButton.png" type="Texture" id=2]
[ext_resource path="res://Town/SellButton.png" type="Texture" id=3]
[ext_resource path="res://Player/dagger.png" type="Texture" id=4]
[ext_resource path="res://Town/Amethyst.png" type="Texture" id=5]
[ext_resource path="res://Town/CloudinJar.png" type="Texture" id=6]
[ext_resource path="res://Town/spiderLegsinjar.png" type="Texture" id=7]
[ext_resource path="res://Town/VolcanicRock.png" type="Texture" id=8]
[ext_resource path="res://Town/Wood.png" type="Texture" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ShopBackground" type="ColorRect" parent="."]
modulate = Color( 0.113725, 0.0470588, 0.0470588, 1 )
margin_right = 58.0
margin_bottom = 39.0

[node name="Dagger" type="Node2D" parent="."]

[node name="DaggerBackground" type="ColorRect" parent="Dagger"]
modulate = Color( 0.0627451, 0.0509804, 0.0509804, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 19.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 15, 10 )

[node name="BuyDagger" type="Button" parent="Dagger"]
modulate = Color( 0.992157, 0.0470588, 0.0470588, 1 )
margin_left = 2.0
margin_top = 14.0
margin_right = 25.0
margin_bottom = 34.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 2 )

[node name="SellDagger" type="Button" parent="Dagger"]
modulate = Color( 1, 0.764706, 0, 1 )
margin_left = 11.0
margin_top = 14.0
margin_right = 34.0
margin_bottom = 34.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 3 )

[node name="Dagger" type="Sprite" parent="Dagger"]
position = Vector2( 11, 7 )
scale = Vector2( 0.796875, 0.796875 )
texture = ExtResource( 4 )

[node name="DaggerLabel" type="Label" parent="Dagger"]
margin_left = 14.0
margin_top = 10.0
margin_right = 30.0
margin_bottom = 26.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="Wood" type="Node2D" parent="."]

[node name="WoodBackground" type="ColorRect" parent="Wood"]
modulate = Color( 0.0627451, 0.0509804, 0.0509804, 1 )
margin_left = 1.0
margin_top = 20.0
margin_right = 19.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 15, 10 )

[node name="BuyWood" type="Button" parent="Wood"]
modulate = Color( 0.992157, 0.0470588, 0.0470588, 1 )
margin_left = 2.0
margin_top = 33.0
margin_right = 25.0
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 2 )

[node name="SellWood" type="Button" parent="Wood"]
modulate = Color( 1, 0.764706, 0, 1 )
margin_left = 11.0
margin_top = 33.0
margin_right = 34.0
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 3 )

[node name="Wood" type="Sprite" parent="Wood"]
position = Vector2( 10, 26 )
texture = ExtResource( 9 )

[node name="WoodLabel" type="Label" parent="Wood"]
margin_left = 14.0
margin_top = 29.0
margin_right = 30.0
margin_bottom = 45.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="Cloud" type="Node2D" parent="."]

[node name="CloudBackground" type="ColorRect" parent="Cloud"]
modulate = Color( 0.0627451, 0.0509804, 0.0509804, 1 )
margin_left = 20.0
margin_top = 1.0
margin_right = 38.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 15, 10 )

[node name="BuyCloud" type="Button" parent="Cloud"]
modulate = Color( 0.992157, 0.0470588, 0.0470588, 1 )
margin_left = 21.0
margin_top = 14.0
margin_right = 44.0
margin_bottom = 34.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 2 )

[node name="SellCloud" type="Button" parent="Cloud"]
modulate = Color( 1, 0.764706, 0, 1 )
margin_left = 30.0
margin_top = 14.0
margin_right = 53.0
margin_bottom = 34.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 3 )

[node name="CloudinJar" type="Sprite" parent="Cloud"]
position = Vector2( 29, 7 )
texture = ExtResource( 6 )

[node name="CloudLabel" type="Label" parent="Cloud"]
margin_left = 33.0
margin_top = 10.0
margin_right = 49.0
margin_bottom = 26.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="Spider" type="Node2D" parent="."]

[node name="SpiderBackground" type="ColorRect" parent="Spider"]
modulate = Color( 0.0627451, 0.0509804, 0.0509804, 1 )
margin_left = 20.0
margin_top = 20.0
margin_right = 38.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 15, 10 )

[node name="BuySpider" type="Button" parent="Spider"]
modulate = Color( 0.992157, 0.0470588, 0.0470588, 1 )
margin_left = 21.0
margin_top = 33.0
margin_right = 44.0
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 2 )

[node name="SellSpider" type="Button" parent="Spider"]
modulate = Color( 1, 0.764706, 0, 1 )
margin_left = 30.0
margin_top = 33.0
margin_right = 53.0
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 3 )

[node name="SpiderLegsinjar" type="Sprite" parent="Spider"]
position = Vector2( 29, 27 )
texture = ExtResource( 7 )

[node name="SpiderLabel" type="Label" parent="Spider"]
margin_left = 33.0
margin_top = 29.0
margin_right = 49.0
margin_bottom = 45.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="VolcanicRock" type="Node2D" parent="."]

[node name="VolcanicRockBackground" type="ColorRect" parent="VolcanicRock"]
modulate = Color( 0.0627451, 0.0509804, 0.0509804, 1 )
margin_left = 39.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 15, 10 )

[node name="BuyVolcanicRock" type="Button" parent="VolcanicRock"]
modulate = Color( 0.992157, 0.0470588, 0.0470588, 1 )
margin_left = 40.0
margin_top = 14.0
margin_right = 63.0
margin_bottom = 34.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 2 )

[node name="SellVolcanicRock" type="Button" parent="VolcanicRock"]
modulate = Color( 1, 0.764706, 0, 1 )
margin_left = 49.0
margin_top = 14.0
margin_right = 72.0
margin_bottom = 34.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 3 )

[node name="VolcanicRock" type="Sprite" parent="VolcanicRock"]
position = Vector2( 48, 9 )
texture = ExtResource( 8 )

[node name="VolcanicLabel" type="Label" parent="VolcanicRock"]
margin_left = 52.0
margin_top = 10.0
margin_right = 68.0
margin_bottom = 26.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="Amethyst" type="Node2D" parent="."]

[node name="AmethystBackground" type="ColorRect" parent="Amethyst"]
modulate = Color( 0.0627451, 0.0509804, 0.0509804, 1 )
margin_left = 39.0
margin_top = 20.0
margin_right = 57.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 15, 10 )

[node name="BuyAmethyst" type="Button" parent="Amethyst"]
modulate = Color( 0.992157, 0.0470588, 0.0470588, 1 )
margin_left = 40.0
margin_top = 33.0
margin_right = 63.0
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 2 )

[node name="SellAmythist" type="Button" parent="Amethyst"]
modulate = Color( 1, 0.764706, 0, 1 )
margin_left = 49.0
margin_top = 33.0
margin_right = 72.0
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.15 )
icon = ExtResource( 3 )

[node name="Amethyst" type="Sprite" parent="Amethyst"]
position = Vector2( 48, 28 )
texture = ExtResource( 5 )

[node name="AmethystLabel" type="Label" parent="Amethyst"]
margin_left = 52.0
margin_top = 29.0
margin_right = 68.0
margin_bottom = 45.0
rect_scale = Vector2( 0.2, 0.2 )

[connection signal="pressed" from="Dagger/BuyDagger" to="." method="_on_BuyDagger_pressed"]
[connection signal="pressed" from="Dagger/SellDagger" to="." method="_on_SellDagger_pressed"]
[connection signal="pressed" from="Wood/BuyWood" to="." method="_on_BuyWood_pressed"]
[connection signal="pressed" from="Wood/SellWood" to="." method="_on_SellWood_pressed"]
[connection signal="pressed" from="Cloud/BuyCloud" to="." method="_on_BuyCloud_pressed"]
[connection signal="pressed" from="Cloud/SellCloud" to="." method="_on_SellCloud_pressed"]
[connection signal="pressed" from="Spider/BuySpider" to="." method="_on_BuySpider_pressed"]
[connection signal="pressed" from="Spider/SellSpider" to="." method="_on_SellSpider_pressed"]
[connection signal="pressed" from="VolcanicRock/BuyVolcanicRock" to="." method="_on_BuyVolcanicRock_pressed"]
[connection signal="pressed" from="VolcanicRock/SellVolcanicRock" to="." method="_on_SellVolcanicRock_pressed"]
[connection signal="pressed" from="Amethyst/BuyAmethyst" to="." method="_on_BuyAmethyst_pressed"]
[connection signal="pressed" from="Amethyst/SellAmythist" to="." method="_on_SellAmythist_pressed"]
